<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="Search"
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/filtro"
        android:icon="@drawable/baseline_filter_alt_24"
        android:title="Filtro"
        app:showAsAction="always"
        >
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <item
                android:id="@+id/filtroPeli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/PELICULA" />
            <item
                android:id="@+id/filtroSerie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/SERIE" />
            <item
                android:id="@+id/filtroLibro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/LIBRO" />
            <item
                android:id="@+id/todos"
                android:title="Todos"
                app:showAsAction="never"/>

        </menu>
    </item>


    <item
        android:title="More..."
        android:id="@+id/txtMore"
        android:icon="@drawable/baseline_more_vert_24"
        app:showAsAction="always">
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <item
                android:id="@+id/mas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/mas" />
            <item
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/about" />
            <item
                android:id="@+id/borrar_todos"
                android:title="Borrar todos los contenidos"
                app:showAsAction="never"/>

        </menu>

    </item>

    <item
        android:title="Perfil"
        android:id="@+id/pefril"
        android:icon="@drawable/baseline_person_24"
        app:showAsAction="always">
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <item
                android:id="@+id/txtPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/perfil" />
        </menu>
    </item>


</menu>
