<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A0916"
    android:backgroundTint="@color/mirojo"
    android:padding="16dp"
    tools:context=".PreferencesActivity">

    <EditText
        android:id="@+id/etSize"
        android:layout_width="222dp"
        android:layout_height="75dp"
        android:layout_marginTop="428dp"
        android:ems="10"
        android:hint="Tamaño..."
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#A3A3A3"
        android:textColorLink="@color/lightBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:text="Letra"
        android:textColor="@color/miamarillo"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:text="Fondo"
        android:textColor="@color/miamarillo"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <RadioGroup
        android:id="@+id/rGroupF"
        android:layout_width="114dp"
        android:layout_height="197dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246">

        <RadioButton
            android:id="@+id/rbBlancoF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blanco"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbRojoF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rojo"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbAmarilloF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amarillo"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbAzulF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/azul"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="108dp"
        android:layout_height="194dp"
        android:background="@color/mirojo"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241">

        <RadioButton
            android:id="@+id/rbBlanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blanco"
            android:textColor="#D5D5D5"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbRojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rojo"
            android:textColor="#D5D5D5"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbAmarillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amarillo"
            android:textColor="#D5D5D5"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/azul"
            android:textColor="#D5D5D5"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="274dp"
        android:layout_height="57dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/miamarillo"
        android:text="Visualizar Politica de Privacidad"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSize"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>